BE/error/src/main/java/com/example/demo/schedule/application/usecase/DeleteScheduleUsecase.java
package com.example.demo.schedule.application.usecase;

public interface DeleteScheduleUsecase {
    void delete(Long eventId);
}
